<resources>
    <string name="app_name">SCAI Client</string>
    <string name="temperature">Temperature</string>
    <string name="switch_view">Switch View</string>
    <string name="altitude">Altitude</string>
    <string name="tipper">Tipper</string>
    <string name="speed">Speed</string>
    <string name="compass">Compass</string>
    <string name="hour">Hour</string>
    <string name="datetime">Time-Date</string>
    <string name="roll">Roll</string>
    <string name="map" translatable="false">MAP</string>
    <string name="camera" translatable="false">CAM</string>
    <string name="settings">Settings</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="pressure">Pressure</string>
    <string name="about">About...</string>
    <string name="aboutInfo"><![CDATA[--SCAI (Computerized System for Smart Trailers)--\r\n \r\n Author: Pablo A. Ingaramo (ingaramopablo@gmail.com)\r\n Date: 06/25/2016\r\n Info: This app is part of a final project of Computers Engineering degree in FCEFyN (Cordoba National University). This app interacts with webservices provided by a Raspberry Pi 2 and an IP Camera, obtaining information about sensors located in a Truck\'s trailer.\r\n \r\n VIEWS:\r\n  -TIPPER. Shows tipper inclination meassured by LSM9DS0 sensor (Graphic & Numeric).\r\n  -ROLL. Shows side inclination meassured by LSM9DS0 sensor (Graphic & Numeric).\r\n  -COMPASS. Shows orientation measured by LSM9DS0 sensor (Graphic).\r\n  -SENSOR-GROUP STATUS. Displays status of GPS, BerryIMU and IPCamera connections. (Graphic: Red:Offline, Green:Online).\r\n  -SPEED. Calculated based in time delta and GPS position delta (Numeric).\r\n  -PRESSURE. Shows ambient pressure meassured by BMP180 sensor (Numeric).\r\n  -ALTITUDE. Shows altitude in relation to sea level calculated from the ambient pressure (Numeric).\r\n  -DATE AND TIME. Obtained from the Android system (Numeric).\r\n  -MAP VIEW. Offline map created using OSMDroid library and Mobile Atlas Creator. Coordinates obtained from GPS module (Graphic).\r\n  -REARVIEW. Video stream emited by IP Camera (Graphic).\r\n \r\n CONFIGURATION MENU:\r\n  -Sensor calibration.\r\n  -RPI Reboot.\r\n  -Web services URL configuration.\r\n]]></string>
    <string name="URLs" translatable="false">URLs</string>
    <string name="ip">IP</string>
    <string name="calibration">Calibration</string>
    <string name="inclination">Inclination</string>
    <string name="inclinationCalibration">INCLINATION. Allign horizontally with the floor both inclination axes and press CALIBRATE.</string>
    <string name="calibrate">Calibrate</string>
    <string name="compassCalibration">COMPASS. Point vehicle to north and press CALIBRATE.</string>
    <string name="temperatureCalibration"><![CDATA[TEMPERATURE. Set current temperature in °C and press CALIBRATE.]]></string>
    <string name="pressureCalibration">PRESSURE. Set the current pressure in hpa and press CALIBRATE.</string>
    <string name="current">Current: </string>
    <string name="result">Result: </string>
    <string name="wait">Wait</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="calibrating">Calibrating...</string>
    <string name="alerts">Alerts</string>
    <string name="isUpAngle">Is up starting on: </string>
    <string name="maximumSpeed">Maximum Speed with tipper up:</string>
    <string name="beepEnabled">Beep alert enabled:</string>
    <string name="limit">Limit</string>
    <string name="restore">Restore</string>
    <string name="restore_default_values">Restore default values</string>

</resources>