<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aboutScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="20dp"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about"
        android:textColor="#EEEEEE"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70sp"
        android:paddingRight="100sp"
        android:paddingTop="60sp">

        <TextView
            android:id="@+id/aboutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutInfo"
            android:textColor="#EEEEEE"
            android:textSize="20sp" />
    </ScrollView>


    <Button
        android:id="@+id/aboutOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/ok" />
</RelativeLayout>