<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="20dp"
    android:paddingLeft="100dp"
    android:paddingRight="100dp"
    android:paddingTop="30dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textColor="#EEEEEE"
        android:textSize="30sp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="60sp"
        android:paddingRight="25sp"
        android:paddingTop="45sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/URLTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/URLs"
                android:textColor="#EEEEEE"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="CAM: "
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/CamIP"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:textColor="#EEEEEE" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="/"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/CamURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#EEEEEE" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="IMU: "
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ImuIP"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textColor="#EEEEEE" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="/"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/ImuURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#EEEEEE" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="GPS: "
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/GpsIP"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textColor="#EEEEEE" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="/"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/GpsURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#EEEEEE" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/calibration"
                android:textColor="#EEEEEE"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="450dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/inclinationCalibration"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/calibrateInclinometerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/calibrate"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/calibrateInclinationResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="450dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/compassCalibration"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/calibrateCompassButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/calibrate"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/calibrateCompassResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/temperatureCalibration"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/currentTemperture"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="#EEEEEE" />

                <Button
                    android:id="@+id/calibrateTemperatureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/calibrate"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/calibrateTemperatureResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/pressureCalibration"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/currentPressure"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:textColor="#EEEEEE" />

                <Button
                    android:id="@+id/calibratePressureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/calibrate"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/calibratePressureResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:textColor="#EEEEEE"
                    android:textSize="20sp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


    <Button
        android:id="@+id/configCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/configApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/apply" />
</RelativeLayout>